--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
   step_progress_indicator: ^1.0.2
   steps_indicator: ^1.3.0
   syncfusion_flutter_sliders: ^20.4.42
+  flutter_spinkit: ^5.1.0
   flutter_test:
     sdk: flutter
 
