--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   flutter_spinkit: ^5.1.0
   flutter_colorpicker: ^1.0.3
+  url_launcher: ^6.0.21
 
 dev_dependencies:
 
